[gd_scene load_steps=22 format=3 uid="uid://brjnfy2555cvi"]

[ext_resource type="Script" uid="uid://dkeh8gh4u0l15" path="res://scripts/UI/level_select.gd" id="1_chg43"]
[ext_resource type="PackedScene" uid="uid://cmku86o88i4pr" path="res://scenes/level_components/player.tscn" id="2_r77uv"]
[ext_resource type="Material" uid="uid://shxmlnfeq0t2" path="res://assets/Material/text_material.tres" id="2_ty08u"]
[ext_resource type="PackedScene" uid="uid://b0k2bchpemght" path="res://scenes/UI/settings.tscn" id="4_7plkq"]
[ext_resource type="PackedScene" uid="uid://c7rbxvsvbojsg" path="res://scenes/level_components/wave_block.tscn" id="5_ckc44"]
[ext_resource type="Shader" uid="uid://cmjryxw4eow51" path="res://assets/Shaders/particle_noise.gdshader" id="6_r77uv"]
[ext_resource type="Theme" uid="uid://02jl3acnqg0j" path="res://assets/UISettings/main_menu.tres" id="8_mi1ok"]

[sub_resource type="LabelSettings" id="LabelSettings_vue75"]
font_size = 48

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_wu84c"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_rtw2f"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_oa1go"]
normal = Vector2(-1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a6e1n"]
resource_local_to_scene = true
shader = ExtResource("6_r77uv")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/pixel_interval = 0
shader_parameter/move_speed = 3.0
shader_parameter/radius = 0.4
shader_parameter/amplitude = 10.0

[sub_resource type="Gradient" id="Gradient_8jpgc"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_76cae"]
resource_local_to_scene = true
gradient = SubResource("Gradient_8jpgc")
width = 20
height = 237
fill_to = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wu84c"]
size = Vector2(384, 744)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4nqmc"]
resource_local_to_scene = true
shader = ExtResource("6_r77uv")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/pixel_interval = 0
shader_parameter/move_speed = 3.0
shader_parameter/radius = 0.4
shader_parameter/amplitude = 10.0

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7plkq"]
resource_local_to_scene = true
gradient = SubResource("Gradient_8jpgc")
width = 20
height = 237
fill_to = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ckc44"]
resource_local_to_scene = true
shader = ExtResource("6_r77uv")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/pixel_interval = 0
shader_parameter/move_speed = 3.0
shader_parameter/radius = 0.4
shader_parameter/amplitude = 10.0

[sub_resource type="GradientTexture2D" id="GradientTexture2D_o2xx4"]
resource_local_to_scene = true
gradient = SubResource("Gradient_8jpgc")
width = 20
height = 237
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mi1ok"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7pml4"]

[node name="LevelSelect" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chg43")

[node name="Label" type="Label" parent="."]
material = ExtResource("2_ty08u")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -227.0
offset_right = 136.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_mi1ok")
text = "Level Select"
label_settings = SubResource("LabelSettings_vue75")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UnaffectedByVisibility" type="Node" parent="."]
process_mode = 3

[node name="Player" parent="UnaffectedByVisibility" instance=ExtResource("2_r77uv")]
process_mode = 3
position = Vector2(300, 337)

[node name="Settings" parent="UnaffectedByVisibility" instance=ExtResource("4_7plkq")]

[node name="Walls" type="Node" parent="UnaffectedByVisibility"]
process_mode = 3

[node name="StaticBody2D" type="StaticBody2D" parent="UnaffectedByVisibility/Walls"]
position = Vector2(557, 643)

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnaffectedByVisibility/Walls/StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_wu84c")

[node name="StaticBody2D3" type="StaticBody2D" parent="UnaffectedByVisibility/Walls"]
position = Vector2(1, 326)

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnaffectedByVisibility/Walls/StaticBody2D3"]
shape = SubResource("WorldBoundaryShape2D_rtw2f")

[node name="StaticBody2D4" type="StaticBody2D" parent="UnaffectedByVisibility/Walls"]
position = Vector2(1150, 326)

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnaffectedByVisibility/Walls/StaticBody2D4"]
shape = SubResource("WorldBoundaryShape2D_oa1go")

[node name="WaveBlocks" type="Node" parent="UnaffectedByVisibility"]
process_mode = 3

[node name="WaveBlock" parent="UnaffectedByVisibility/WaveBlocks" instance=ExtResource("5_ckc44")]
process_mode = 3
position = Vector2(192, 544)
target_position = Vector2(192, 0)

[node name="ParticlesSprite" parent="UnaffectedByVisibility/WaveBlocks/WaveBlock" index="0"]
material = SubResource("ShaderMaterial_a6e1n")
texture = SubResource("GradientTexture2D_76cae")

[node name="CollisionShape2D" parent="UnaffectedByVisibility/WaveBlocks/WaveBlock" index="1"]
position = Vector2(0, 362)
shape = SubResource("RectangleShape2D_wu84c")

[node name="WaveBlock2" parent="UnaffectedByVisibility/WaveBlocks" instance=ExtResource("5_ckc44")]
process_mode = 3
position = Vector2(576, 544)
target_position = Vector2(576, 0)
frequency_effect_range = 1

[node name="ParticlesSprite" parent="UnaffectedByVisibility/WaveBlocks/WaveBlock2" index="0"]
material = SubResource("ShaderMaterial_4nqmc")
texture = SubResource("GradientTexture2D_7plkq")

[node name="CollisionShape2D" parent="UnaffectedByVisibility/WaveBlocks/WaveBlock2" index="1"]
position = Vector2(0, 362)
shape = SubResource("RectangleShape2D_wu84c")

[node name="WaveBlock3" parent="UnaffectedByVisibility/WaveBlocks" instance=ExtResource("5_ckc44")]
process_mode = 3
position = Vector2(960, 544)
target_position = Vector2(960, 0)
frequency_effect_range = 2

[node name="ParticlesSprite" parent="UnaffectedByVisibility/WaveBlocks/WaveBlock3" index="0"]
material = SubResource("ShaderMaterial_ckc44")
texture = SubResource("GradientTexture2D_o2xx4")

[node name="CollisionShape2D" parent="UnaffectedByVisibility/WaveBlocks/WaveBlock3" index="1"]
position = Vector2(0, 362)
shape = SubResource("RectangleShape2D_wu84c")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.5
offset_top = -54.0
offset_right = 122.5
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 30
columns = 5

[node name="Level1Button" type="Button" parent="GridContainer"]
material = ExtResource("2_ty08u")
layout_mode = 2
theme = ExtResource("8_mi1ok")
theme_override_colors/font_pressed_color = Color(0.29411766, 0.29411766, 0.29411766, 1)
theme_override_colors/font_hover_color = Color(0.5882353, 0.5882353, 0.5882353, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mi1ok")
text = "1"

[node name="Level2Button" type="Button" parent="GridContainer"]
material = ExtResource("2_ty08u")
layout_mode = 2
theme = ExtResource("8_mi1ok")
theme_override_colors/font_pressed_color = Color(0.29411766, 0.29411766, 0.29411766, 1)
theme_override_colors/font_hover_color = Color(0.5882353, 0.5882353, 0.5882353, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mi1ok")
text = "2"

[node name="Level3Button" type="Button" parent="GridContainer"]
material = ExtResource("2_ty08u")
layout_mode = 2
theme = ExtResource("8_mi1ok")
theme_override_colors/font_pressed_color = Color(0.29411766, 0.29411766, 0.29411766, 1)
theme_override_colors/font_hover_color = Color(0.5882353, 0.5882353, 0.5882353, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mi1ok")
text = "3"

[node name="Level4Button" type="Button" parent="GridContainer"]
material = ExtResource("2_ty08u")
layout_mode = 2
theme = ExtResource("8_mi1ok")
theme_override_colors/font_pressed_color = Color(0.29411766, 0.29411766, 0.29411766, 1)
theme_override_colors/font_hover_color = Color(0.5882353, 0.5882353, 0.5882353, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mi1ok")
text = "4"

[node name="Level5Button" type="Button" parent="GridContainer"]
material = ExtResource("2_ty08u")
layout_mode = 2
theme = ExtResource("8_mi1ok")
theme_override_colors/font_pressed_color = Color(0.29411766, 0.29411766, 0.29411766, 1)
theme_override_colors/font_hover_color = Color(0.5882353, 0.5882353, 0.5882353, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mi1ok")
text = "5"

[node name="Level6Button" type="Button" parent="GridContainer"]
material = ExtResource("2_ty08u")
layout_mode = 2
theme = ExtResource("8_mi1ok")
theme_override_colors/font_pressed_color = Color(0.29411766, 0.29411766, 0.29411766, 1)
theme_override_colors/font_hover_color = Color(0.5882353, 0.5882353, 0.5882353, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mi1ok")
text = "6"

[node name="Level7Button" type="Button" parent="GridContainer"]
material = ExtResource("2_ty08u")
layout_mode = 2
theme = ExtResource("8_mi1ok")
theme_override_colors/font_pressed_color = Color(0.29411766, 0.29411766, 0.29411766, 1)
theme_override_colors/font_hover_color = Color(0.5882353, 0.5882353, 0.5882353, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mi1ok")
text = "7"

[node name="Level8Button" type="Button" parent="GridContainer"]
material = ExtResource("2_ty08u")
layout_mode = 2
theme = ExtResource("8_mi1ok")
theme_override_colors/font_pressed_color = Color(0.29411766, 0.29411766, 0.29411766, 1)
theme_override_colors/font_hover_color = Color(0.5882353, 0.5882353, 0.5882353, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_mi1ok")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mi1ok")
text = "8"

[node name="SettingsButton" type="Button" parent="."]
material = ExtResource("2_ty08u")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = 80.0
offset_right = 48.5
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_mi1ok")
theme_override_colors/font_pressed_color = Color(0.29411766, 0.29411766, 0.29411766, 1)
theme_override_colors/font_hover_color = Color(0.5890956, 0.5890956, 0.5890956, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_7pml4")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_7pml4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7pml4")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_7pml4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7pml4")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_7pml4")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_7pml4")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_7pml4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7pml4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_7pml4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7pml4")
text = "Settings"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]

[editable path="UnaffectedByVisibility/WaveBlocks/WaveBlock"]
[editable path="UnaffectedByVisibility/WaveBlocks/WaveBlock2"]
[editable path="UnaffectedByVisibility/WaveBlocks/WaveBlock3"]
